--- a/src/components/HeroPage/HeroPage.scss
+++ b/src/components/HeroPage/HeroPage.scss
@@ -8,7 +8,7 @@ h1, h2, h3, h4, h5, h6 {
   /*50px is navBar height*/
   margin-top: 50px;
   height: calc(100vh - 50px);
-  background-image: url('static/landing.png');
+  background-image: url('static/Blueprint1-background.png');
   background-size: 100% 100%;
   background-repeat: no-repeat;
 }
@@ -24,7 +24,7 @@ h1, h2, h3, h4, h5, h6 {
 img {
   display: block;
   margin: auto;
-  height: 25vh;
+  height: 34.25vh;
   width: 34.25vh;
 }
 
