--- a/src/components/TracksPage/TracksPage.scss
+++ b/src/components/TracksPage/TracksPage.scss
@@ -4,7 +4,7 @@
 	width: 100%;
 	height: 100%;
 	background-size: 100% 100%;
-	background-image: url('static/tracks.png');
+	background-image: url('static/Blueprint1-background.png');
 	background-repeat: no-repeat;
 }
 
