Font changes, sponsor changes
Font color and family changes. Sponsors split between student groups,
corporate sponsors, and topic sponsors.

--- a/src/components/AboutSection/AboutSection.scss
+++ b/src/components/AboutSection/AboutSection.scss
@@ -5,7 +5,7 @@
 }
 
 .sectionHeader {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   text-align: left;
   font-size: 1.5em;
   color: $aboutBlack;
