--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,10 +1,10 @@
 @import './navbar';
 
-$applyGray: #D8D8D8;
-$applyBlue: #2AA2F7;
-$aboutBlack: #4A4A4A;
-$headerGray: #CDCCCE; 
-$footerBlack: #302F30;
+$applyGray: #bdccdc;
+$applyBlue: #195EA7;
+$aboutBlack: #0a1429;
+$headerGray: #bdccdc; 
+$footerBlack: #0a1429;
 
 $tabletBreakpoint: 768px;
 $desktopBreakpoint: 1024px;
