--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -5,7 +5,7 @@
 }
 
 .header {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
   color: $headerGray;
   letter-spacing: 5px;
