--- a/src/components/HeroPage/HeroPage.scss
+++ b/src/components/HeroPage/HeroPage.scss
@@ -1,7 +1,7 @@
 @import 'src/styles/base';
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 .hero {
