--- a/src/components/SpeakersSection/SpeakersSection.scss
+++ b/src/components/SpeakersSection/SpeakersSection.scss
@@ -5,7 +5,7 @@
 }
 
 .sectionHeader {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   text-align: left;
   font-size: 1.5em;
   color: $aboutBlack;
