--- a/src/components/TracksBox/TracksBox.scss
+++ b/src/components/TracksBox/TracksBox.scss
@@ -18,7 +18,7 @@
 	color: #4A4A4A;
 	text-align: center;
 	padding: 20px 30px;
-	font-family: "Montserrat", sans-serif;
+	font-family: 'Roboto Condensed', sans-serif;
 }
 
 .paragraph > div {
@@ -26,7 +26,7 @@
 }
 
 .paragraph > p{
-	padding: 20px 30px;
+	padding: 10px 10px;
 }
 
 .moreButton {
@@ -38,12 +38,19 @@
 	width: 8em;
 	height: 2.5em;
 	float: right;
-	padding: 1px 0 0 0;
-	margin: 0 30px 20px 0;
+	padding: 0 0 0 0;
+	margin: 0 0 15px 0;
 }
 
 .moreButton:hover {
   background-color: darken($applyBlue, 10%);
+}
+
+.sponsorImage {
+  	display: block;
+  	height: 10vh;
+  	width: auto;
+  	margin: 0 0 0 0;
 }
 
 @media (min-width: $tabletBreakpoint) {
