Fixes header, changes logo
Fixes header, changes logo

--- a/src/components/HeroPage/HeroPage.scss
+++ b/src/components/HeroPage/HeroPage.scss
@@ -24,8 +24,8 @@ h1, h2, h3, h4, h5, h6 {
 img {
   display: block;
   margin: auto;
-  height: 40vh;
-  width: 42vh;
+  height: 45vh;
+  width: auto;
 }
 
 .hero h6 {
