Updates Speaker bios, adds sponsors
Updates Speaker bios, adds sponsors

--- a/src/components/SpeakersSection/SpeakersSection.scss
+++ b/src/components/SpeakersSection/SpeakersSection.scss
@@ -30,8 +30,8 @@
 .sectionImage {
   display: block;
   margin: auto;
-  height: 25vh;
-  width: auto;
+  height: auto;
+  width: 20vh;
 }
 
 @media (min-width: $tabletBreakpoint) {
