--- a/src/components/SchedulePage/SchedulePage.scss
+++ b/src/components/SchedulePage/SchedulePage.scss
@@ -4,13 +4,13 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Roboto Condensed', sans-serif;
 }
 
-.hero {
+.schedule {
   /*50px is navBar height*/
   margin-top: 50px;
-  height: calc(100vh - 50px);
+  height: calc(70vh - 50px);
   margin-right: 50px;
   margin-left: 50px;
-  background-image: url('static/calendar.png');
+  background-image: url('static/blueprint1-backgroundCompressed.png');
   background-size: 100% 100%;
   background-repeat: no-repeat;
 }
@@ -26,7 +26,7 @@ h1, h2, h3, h4, h5, h6 {
 img {
   display: block;
   margin: auto;
-  height: 30vh;
+  height: calc(55vh - 50px);
   width: auto;
 }
 
